[package]
name = "libssh-rs-sys"
version = "0.1.1"
authors = ["Wez Furlong"]
edition = "2018"
links = "libssh"
repository = "https://github.com/wez/libssh-rs"
description = "Native bindings to the libssh library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[dependencies]
libz-sys = { optional=true, version = "1.1", default-features = false, features = ["libc"] }
# Pinned on this last version with openssl-src-300 until a newer release
# is made that unblocks it.
# <https://github.com/sfackler/rust-openssl/pull/1578>
openssl-sys = "=0.9.71"

[features]
vendored = ["libz-sys"]
vendored-openssl = ["openssl-sys/vendored"]

