[package]
name = "libssh-rs"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/wez/libssh-rs"
description = "Bindings to the libssh library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
libssh-rs-sys = { version = "0.2.0", path = "../libssh-rs-sys" }
thiserror = "1.0"
openssl-sys = "~0.9"

[features]
vendored = ["libssh-rs-sys/vendored"]
vendored-openssl = ["libssh-rs-sys/vendored-openssl"]
