[package]
name = "libssh-rs"
version = "0.3.4"
edition = "2018"
repository = "https://github.com/wez/libssh-rs"
description = "Bindings to the libssh library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
libc = "0.2"
libssh-rs-sys = { version = "0.2.6", path = "../libssh-rs-sys" }
thiserror = "1.0"
openssl-sys = "0.9.105"

[features]
vendored = ["libssh-rs-sys/vendored"]
vendored-openssl = ["libssh-rs-sys/vendored-openssl"]
